code refactor for Jena 5.0 update